// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginPage rendering renders LoginPage 1`] = `
<div
  id="login-page"
>
  <LoginPage
    brandImgSrc="/some-logo"
    className="login-pf"
    loginSubtitle="Log in to your account"
    loginTitle="Welcome"
    textContent="some caption"
  >
    <Form
      action="/users/login"
      method="post"
    >
      <FormAlert>
        <Alert
          aria-live="polite"
          isInline={true}
          key="login-failed"
          ouiaId="login-alert"
          title={
            Array [
              "some-error",
            ]
          }
          variant="danger"
        />
      </FormAlert>
      <FormGroup
        fieldId="username"
        isRequired={true}
      >
        <TextInput
          autoComplete="username"
          autoFocus={true}
          id="login_login"
          isRequired={true}
          name="login[login]"
          onChange={[Function]}
          ouiaId="login-username"
          placeholder="Username"
          type="text"
          value=""
        />
      </FormGroup>
      <FormGroup
        fieldId="password"
        isRequired={true}
      >
        <TextInput
          autoComplete="current-password"
          id="login_password"
          isRequired={true}
          name="login[password]"
          onChange={[Function]}
          ouiaId="login-password"
          placeholder="Password"
          type="password"
          value=""
        />
      </FormGroup>
      <input
        name="authenticity_token"
        type="hidden"
        value="some token"
      />
      <ActionGroup>
        <Button
          isBlock={true}
          isDisabled={true}
          isLoading={false}
          onClick={[Function]}
          ouiaId="login-submit"
          type="submit"
          variant="primary"
        >
          Log In
        </Button>
      </ActionGroup>
    </Form>
  </LoginPage>
</div>
`;

exports[`LoginPage rendering renders LoginPage with OIDC providers 1`] = `
<div
  id="login-page"
>
  <LoginPage
    brandImgSrc="/some-logo"
    className="login-pf"
    loginSubtitle="Log in to your account"
    loginTitle="Welcome"
    textContent="some caption"
  >
    <Form
      action="/users/login"
      method="post"
    >
      <FormAlert>
        <Alert
          aria-live="polite"
          isInline={true}
          key="login-failed"
          ouiaId="login-alert"
          title={
            Array [
              "some-error",
            ]
          }
          variant="danger"
        />
      </FormAlert>
      <FormGroup
        fieldId="username"
        isRequired={true}
      >
        <TextInput
          autoComplete="username"
          autoFocus={true}
          id="login_login"
          isRequired={true}
          name="login[login]"
          onChange={[Function]}
          ouiaId="login-username"
          placeholder="Username"
          type="text"
          value=""
        />
      </FormGroup>
      <FormGroup
        fieldId="password"
        isRequired={true}
      >
        <TextInput
          autoComplete="current-password"
          id="login_password"
          isRequired={true}
          name="login[password]"
          onChange={[Function]}
          ouiaId="login-password"
          placeholder="Password"
          type="password"
          value=""
        />
      </FormGroup>
      <input
        name="authenticity_token"
        type="hidden"
        value="some token"
      />
      <ActionGroup>
        <Button
          isBlock={true}
          isDisabled={true}
          isLoading={false}
          onClick={[Function]}
          ouiaId="login-submit"
          type="submit"
          variant="primary"
        >
          Log In
        </Button>
      </ActionGroup>
    </Form>
    <div
      className="oidc-login-section"
    >
      <div
        className="oidc-divider"
      >
        <span>
          Or login with
        </span>
      </div>
      <div
        className="oidc-buttons"
      >
        <OidcProviderButton
          key="1"
          provider={
            Object {
              "id": 1,
              "loginUrl": "/users/auth/oidc_1",
              "name": "Google",
            }
          }
        />
        <OidcProviderButton
          key="2"
          provider={
            Object {
              "id": 2,
              "loginUrl": "/users/auth/oidc_2",
              "name": "Keycloak",
            }
          }
        />
      </div>
    </div>
  </LoginPage>
</div>
`;
